// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChecklistMonthlyTriggerConditionsBlock > ON_CALENDAR_DAY mode > renders correctly 1`] = `
<v-radio-group-stub
  centeraffix="true"
  density="default"
  error="false"
  errormessages=""
  falseicon="$radioOff"
  focused="false"
  glow="false"
  height="auto"
  hidedetails="true"
  hidespinbuttons="false"
  iconcolor="false"
  inline="false"
  maxerrors="1"
  messages=""
  modelvalue="ON_CALENDAR_DAY"
  persistenthint="false"
  ripple="true"
  rules=""
  trueicon="$radioOn"
  type="radio"
  valuecomparator="[Function]"
>
  <div
    class="d-flex mx-1 mt-2 align-center"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific weekday:"
        modelvalue="false"
        sublabel=""
        value="ON_WEEKDAY"
      />
    </div>
    <div
      class="d-flex align-center"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputclass="mx-2"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="text"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
    </div>
  </div>
  <div
    class="d-flex mx-1 mt-2 align-center mb-1"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific calendar day:"
        modelvalue="false"
        sublabel=""
        value="ON_CALENDAR_DAY"
      />
    </div>
    <evocon-number-input-stub
      allowfloat="true"
      allownegative="false"
      class="mx-2"
      disabled="false"
      error="false"
      grow="true"
      maxvalue="999999999999999"
      modelvalue="15"
      suffix="day"
      usechip="true"
    />
    <!--v-if-->
  </div>
</v-radio-group-stub>
`;

exports[`ChecklistMonthlyTriggerConditionsBlock > ON_CALENDAR_DAY mode > renders correctly if  hasDayOfMonthError is true 1`] = `
<v-radio-group-stub
  centeraffix="true"
  density="default"
  error="false"
  errormessages=""
  falseicon="$radioOff"
  focused="false"
  glow="false"
  height="auto"
  hidedetails="true"
  hidespinbuttons="false"
  iconcolor="false"
  inline="false"
  maxerrors="1"
  messages=""
  modelvalue="ON_CALENDAR_DAY"
  persistenthint="false"
  ripple="true"
  rules=""
  trueicon="$radioOn"
  type="radio"
  valuecomparator="[Function]"
>
  <div
    class="d-flex mx-1 mt-2 align-center"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific weekday:"
        modelvalue="false"
        sublabel=""
        value="ON_WEEKDAY"
      />
    </div>
    <div
      class="d-flex align-center"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputclass="mx-2"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="text"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
    </div>
  </div>
  <div
    class="d-flex mx-1 mt-2 align-center mb-1"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific calendar day:"
        modelvalue="false"
        sublabel=""
        value="ON_CALENDAR_DAY"
      />
    </div>
    <evocon-number-input-stub
      allowfloat="true"
      allownegative="false"
      class="mx-2"
      disabled="false"
      error="true"
      grow="true"
      maxvalue="999999999999999"
      suffix="day"
      usechip="true"
    />
    <span
      class="text-body-small text-error"
    >
      Value must be between {min} and {max}
    </span>
  </div>
</v-radio-group-stub>
`;

exports[`ChecklistMonthlyTriggerConditionsBlock > ON_CALENDAR_DAY mode > renders correctly in mobile if dayOfMonth is 29 1`] = `
<v-radio-group-stub
  centeraffix="true"
  density="default"
  error="false"
  errormessages=""
  falseicon="$radioOff"
  focused="false"
  glow="false"
  height="auto"
  hidedetails="true"
  hidespinbuttons="false"
  iconcolor="false"
  inline="false"
  maxerrors="1"
  messages=""
  modelvalue="ON_CALENDAR_DAY"
  persistenthint="false"
  ripple="true"
  rules=""
  trueicon="$radioOn"
  type="radio"
  valuecomparator="[Function]"
>
  <div
    class="d-flex mx-1 mt-2 align-start flex-column"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific weekday:"
        modelvalue="false"
        sublabel=""
        value="ON_WEEKDAY"
      />
    </div>
    <div
      class="d-flex align-center ml-8 mt-2"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputclass="mx-2"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="text"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
    </div>
  </div>
  <div
    class="d-flex mx-1 mt-2 align-start flex-column"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific calendar day:"
        modelvalue="false"
        sublabel=""
        value="ON_CALENDAR_DAY"
      />
    </div>
    <evocon-number-input-stub
      allowfloat="true"
      allownegative="false"
      class="mx-2 ml-10 mt-2"
      disabled="false"
      error="false"
      grow="true"
      maxvalue="999999999999999"
      modelvalue="29"
      suffix="day"
      usechip="true"
    />
    <span
      class="text-body-small ml-10 mt-2 text-secondary"
    >
      Not all months have {value} days
    </span>
  </div>
</v-radio-group-stub>
`;

exports[`ChecklistMonthlyTriggerConditionsBlock > ON_WEEKDAY mode > renders correctly 1`] = `
<v-radio-group-stub
  centeraffix="true"
  density="default"
  error="false"
  errormessages=""
  falseicon="$radioOff"
  focused="false"
  glow="false"
  height="auto"
  hidedetails="true"
  hidespinbuttons="false"
  iconcolor="false"
  inline="false"
  maxerrors="1"
  messages=""
  modelvalue="ON_WEEKDAY"
  persistenthint="false"
  ripple="true"
  rules=""
  trueicon="$radioOn"
  type="radio"
  valuecomparator="[Function]"
>
  <div
    class="d-flex mx-1 mt-2 align-center"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific weekday:"
        modelvalue="false"
        sublabel=""
        value="ON_WEEKDAY"
      />
    </div>
    <div
      class="d-flex align-center"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputclass="mx-2"
        menuinputtype="primary"
        modelvalue="1"
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint=""
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="text"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue="MONDAY"
        numericorderby="false"
        placeholder=""
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="true"
      />
    </div>
  </div>
  <div
    class="d-flex mx-1 mt-2 align-center mb-1"
  >
    <div
      class="d-flex align-center"
    >
      <evocon-v-radio-stub
        label="On a specific calendar day:"
        modelvalue="false"
        sublabel=""
        value="ON_CALENDAR_DAY"
      />
    </div>
    <evocon-number-input-stub
      allowfloat="true"
      allownegative="false"
      class="mx-2"
      disabled="true"
      error="false"
      grow="true"
      maxvalue="999999999999999"
      suffix="day"
      usechip="true"
    />
    <!--v-if-->
  </div>
</v-radio-group-stub>
`;
